style fix : input text color not visible

--- a/src/App.css
+++ b/src/App.css
@@ -75,6 +75,7 @@ input {
   font-family: system-ui;
   font-size: large;
   caret-color: darkblue;
+  color: black;
 }
 .active {
   color: red;
